# b_ctrldbox_commissioning

./: CMakeLists.txt  INSTRUCTIONS.md  LAUNCH.md  LICENSE  README.md  USING_THIS_REPO.md  comissioning.env  comissioning.env.example  common.sh  docker-compose.yml  enter.sh  package.xml  start.sh  stop.sh
b_robotized_fanuc_demo/: package.xml
b_robotized_fanuc_demo/config/moveit/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml  pilz_planning.yaml
b_robotized_fanuc_demo/launch/: fanuc_bringup_mock.launch.xml  fanuc_description.launch.xml
b_robotized_fanuc_demo/srdf/: m20id_35_macro.srdf.xacro
docs/: FAQ_NEXT_STEPS.md  RUNNING_CONTAINERS.md  SETUP_COMMMISSIONING.md  SETUP_CTRLX.md  SETUP_NTP_SERVER.md  SETUP_ZENOH.md
docs/supported_robots/: KASSOW.md  KUKA.md  UR.md
fanuc/: LAUNCH.md  activate_controllers.sh  activate_hardware.sh  deactivate_hardware.sh  scenario_controllers.yaml
kuka/KRC4/: LAUNCH.md  b_ctrldbox.rsi.xml  b_ctrldbox_eth.xml  b_ctrldbox_rsi.src
kuka/KRC5/: LAUNCH.md  b_ctrldbox_rsi.rsix  b_ctrldbox_rsi.src  b_ctrldbox_rsi_eth.xml  kuka_jtc.yaml
kuka/KSSv8.6/: RSI_CONFIGURATIONS.md  deploy.bat
ur/: LAUNCH.md
ur/b_controlled_box_launch/: CMakeLists.txt  LAUNCH_INSTRUCTIONS.md  setup.cfg
ur/b_controlled_box_launch/b_controlled_box_launch/: listener_string.py
ur/b_controlled_box_launch/launch/: load_controllers_for_the_scenario.launch.xml  ur_publish_description.launch.py  ur_publish_description.launch.xml
ur/b_controlled_box_launch/urdf/: supported_hardware.urdf.xacro
workspaces/: README.md
workspaces/fanuc/: CMakeLists.txt  LAUNCH.md
workspaces/fanuc/config/moveit/: ompl_planning.yaml
workspaces/fanuc/launch/: fanuc_moveit.launch.xml
workspaces/fanuc/rviz/: fanuc_test.rviz
workspaces/fanuc/srdf/: fanuc_test.srdf.xacro
workspaces/fanuc/urdf/: fanuc_test.urdf.xacro
workspaces/franka/: CMakeLists.txt  LAUNCH.md  package.xml
workspaces/franka/config/: franka.rviz  franka_dual_arm.rviz  franka_moveit.rviz  scenario_controllers.yaml  scenario_controllers_mock.yaml
workspaces/franka/launch/: franka_bringup_mock.launch.xml  franka_description.launch.xml  franka_dual_arm_bringup_mock.launch.xml  franka_dual_arm_description.launch.xml  franka_dual_arm_moveit.launch.xml  franka_moveit.launch.xml
workspaces/kassow/: LAUNCH.md
workspaces/kuka/: LAUNCH.md  scenario_controllers.yaml
workspaces/kuka/KSSv8.6/: deploy.bat
workspaces/pssbl/: LAUNCH.md
workspaces/pssbl/pssbl_robot_descriptions/: CMakeLists.txt  package.xml
workspaces/pssbl/pssbl_robot_descriptions/config/: view.rviz
workspaces/pssbl/pssbl_robot_descriptions/launch/: description.launch.xml  view_robot.launch.xml
workspaces/pssbl/pssbl_robot_descriptions/meshes/orba6_1215/collision/: base_link.stl  flange.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl
workspaces/pssbl/pssbl_robot_descriptions/meshes/orba6_1215/visual/: base_link.stl  flange.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl
workspaces/pssbl/pssbl_robot_descriptions/meshes/orba6_1215_gripper/collision/: mount_link.stl
workspaces/pssbl/pssbl_robot_descriptions/meshes/orba6_1215_gripper/visual/: mount_link.stl
workspaces/pssbl/pssbl_robot_descriptions/meshes/orba6_2257/collision/: base_link.stl  flange.stl  link1.stl  link2.stl  link3.stl  link4-5.stl  link6.stl
workspaces/pssbl/pssbl_robot_descriptions/meshes/orba6_2257/visual/: base_link.dae  flange.dae
workspaces/pssbl/pssbl_robot_descriptions/meshes/vacuum_gripper/collision/: base_link.dae  base_link.stl  link2.stl
workspaces/pssbl/pssbl_robot_descriptions/meshes/vacuum_gripper/visual/: base_link.dae  link2.dae
workspaces/pssbl/pssbl_robot_descriptions/meshes/workspace/collision/: desk.stl  door.stl
workspaces/pssbl/pssbl_robot_descriptions/meshes/workspace/visual/: desk.stl
workspaces/pssbl/pssbl_robot_descriptions/urdf/: gripper_macro.ros2_control.xacro  orba6_1215.urdf.xacro  orba6_2257.urdf.xacro
workspaces/pssbl/pssbl_robot_descriptions/urdf/common/: ctrlX_drives_data_layer.ros2_control.xacro
workspaces/pssbl/pssbl_robot_descriptions/urdf/orba6_1215/: orba6_1215_gripper_macro.xacro  orba6_1215_macro.xacro  orba6_macro.ros2_control.xacro
workspaces/pssbl/pssbl_robot_descriptions/urdf/orba6_2257/: orba6_2257_macro.xacro  orba6_macro.ros2_control.xacro  vacuum_gripper_macro.xacro
workspaces/ur/: CMakeLists.txt  LAUNCH.md  package.xml
workspaces/ur/b_controlled_box_launch/: CMakeLists.txt  package.xml
workspaces/ur/b_controlled_box_launch/launch/: ur_moveit.launch.py  ur_publish_description.launch.xml
workspaces/ur/config/: scenario_controllers.yaml
workspaces/ur/launch/: bringup_mock.launch.xml  description.launch.xml  moveit.launch.py
workspaces/ur/scripts/: activate_controllers.sh  activate_hardware.sh  deactivate_hardware.sh  scenario_controllers.yaml
workspaces/ur/urdf/: ur_demo.urdf.xacro
(+51 files in other folders)
