<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>b_ctrldbox_commissioning</name>
  <version>0.0.0</version>
  <description>Files for testing the commissioning of b»Controlled Box on different robots.</description>
  <maintainer email="denis.stogl@b-robotized.com">Dr. Denis Stogl</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
