<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>b_robotized_fanuc_demo</name>
  <version>0.0.0</version>
  <description>Demo package for commissioning fanuc robot</description>
  <maintainer email="nibanovic@gmail.com">Nikola Banovic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
