<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pssbl_robot_descriptions</name>
  <version>0.1.0</version>
  <description>URDF/xacro descriptions and meshes for PSSBL ORBA6 robots (1215 and 2257 models)</description>
  <maintainer email="nikola.banovic@b-robotized.com">Nikola Banovic</maintainer>
  <maintainer email="denis.stogl@b-robotized.com">Dr. Denis Stogl</maintainer>
  <license>Copyright (c) 2025, b-robotized</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
