<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>b_controlled_box_launch</name>
  <version>0.1.0</version>
  <description>launch files and utilities for ctrlx</description>
  <maintainer email="nikola.banovic@b-robotized.com">Nikola Banovic</maintainer>
  <maintainer email="denis.stogl@b-robotized.com">Dr. Denis Stogl</maintainer>
  <license>Copyright (c) 2025, b-robotized</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
